--- a/package.json
+++ b/package.json
@@ -2,21 +2,31 @@
   "name": "conics-explorer",
   "version": "1.0.0",
   "description": "Mathematical conic section explorer with AI-driven shape generation",
-  "main": "index.html",
+  "type": "module",
   "scripts": {
-    "dev": "npm run ts:watch & npm run serve",
-    "build": "npm run ts:build",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro",
     "ts:build": "tsc",
     "ts:watch": "tsc --watch",
     "serve": "python -m http.server 8000",
     "type-check": "tsc --noEmit"
   },
+  "dependencies": {
+    "@astrojs/starlight": "^0.15.2",
+    "@astrojs/tailwind": "^5.0.3",
+    "astro": "^4.0.6",
+    "d3": "^7.8.5",
+    "sharp": "^0.33.0",
+    "tailwindcss": "^3.3.6"
+  },
   "devDependencies": {
     "@types/d3": "^7.4.3",
+    "@tailwindcss/typography": "^0.5.10",
+    "daisyui": "^4.4.20",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "d3": "^7.8.5"
   },
   "keywords": [
     "mathematics",
@@ -24,7 +34,9 @@
     "svg",
     "visualization",
     "geometry",
-    "education"
+    "education",
+    "astro",
+    "starlight"
   ],
   "author": "Conics Explorer Team",
   "license": "MIT"
